--- a/.github/workflows/pacman.yaml
+++ b/.github/workflows/pacman.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
-          github_user_name: ${{ github.kai-zenn }}
+          github_user_name: kai-zenn
 
 
       - name: push pacman-contribution-graph.svg to the output branch
